--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         let menuShape = $(".menu_shape");
         let menuShapeBG = $(".menu_shape-bg");
         let menuLink = $(".menu_link");
-        let currentLink = $(".menu_link.w--current");
+        let currentLink = $("jeevancrasta.me");
 
         // On page load
         moveShape(currentLink);
