--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </a><a href="/archive" class="menu_link w-inline-block">
                     <p class="menu_link-text">Archive</p>
                     <div class="menu_link-bg"></div>
-                </a><a href="/about" class="menu_link w-inline-block">
+                </a><a href="/about.html" class="menu_link w-inline-block">
                     <p class="menu_link-text">About</p>
                     <div class="menu_link-bg"></div>
                 </a>
