--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container-3 w-container"><a href="#" class="w-nav-brand"><img
                     src="https://assets-global.website-files.com/65c89c490ab204d27c256498/65c911b44e251835b4d45ec4_Frame%20309.png"
                     loading="lazy" alt="" class="image-3" /></a>
-            <nav role="navigation" class="w-nav-menu"><a href="jeevancrasta.me/about.html" class="nav-link link-2 w-nav-link">About</a><a
+            <nav role="navigation" class="w-nav-menu"><a href="/about.html" class="nav-link link-2 w-nav-link">About</a><a
                     href="#" class="link-2 w-nav-link">Contact</a></nav>
             <div class="w-nav-button">
                 <div class="w-icon-nav-menu"></div>
